@@ -402,6 +402,10 @@
 <!ENTITY st-rcnh '<link linkend="st-rcnh"><function>GRAY:STREAM-READ-CHAR-NO-HANG</function></link>'>
 <!ENTITY st-uc '<link linkend="st-uc"><function>GRAY:STREAM-UNREAD-CHAR</function></link>'>
 <!ENTITY st-wc '<link linkend="st-wc"><function>GRAY:STREAM-WRITE-CHAR</function></link>'>
+<!ENTITY st-rd-cs '<link linkend="st-rd-cs"><function>GRAY:STREAM-READ-CHAR-SEQUENCE</function></link>'>
+<!ENTITY st-rd-bs '<link linkend="st-rd-bs"><function>GRAY:STREAM-READ-BYTE-SEQUENCE</function></link>'>
+<!ENTITY st-wr-cs '<link linkend="st-wr-cs"><function>GRAY:STREAM-WRITE-CHAR-SEQUENCE</function></link>'>
+<!ENTITY st-wr-bs '<link linkend="st-wr-bs"><function>GRAY:STREAM-WRITE-BYTE-SEQUENCE</function></link>'>
 <!ENTITY string-width '<link linkend="string-width"><function>EXT:STRING-WIDTH</function></link>'>
 <!ENTITY string-invertcase '<link linkend="string-invertcase"><function>EXT:STRING-INVERTCASE</function></link>'>
 <!ENTITY nstring-invertcase '<link linkend="string-invertcase"><function>EXT:NSTRING-INVERTCASE</function></link>'>
