@@ -1,3 +1,10 @@
+2008-03-24  Sam Steingold  <sds@gnu.org>
+
+	* gray.lisp (stream-read-sequence): define methods for
+	fundamental-binary-input-stream & fundamental-character-input-stream
+	(stream-write-sequence): define methods for
+	fundamental-binary-output-stream & fundamental-character-output-stream
+
 2008-03-23  Sam Steingold  <sds@gnu.org>
 
 	implemented GRAY:STREAM-READ-SEQUENCE and GRAY:STREAM-WRITE-SEQUENCE
